Improve Select component style and fix bug on scrollbar and body padding

--- a/app/frontend/src/styles/index.css
+++ b/app/frontend/src/styles/index.css
@@ -5,11 +5,15 @@ html {
     scroll-behavior: smooth;
 }
 
+html body[data-scroll-locked] {
+    overflow-y: scroll !important;
+    margin: 0 !important;
+}
+
 body {
     background-color: var(--color-background);
-    /* background-color: white; */
     font-family: var(--font-body);
-    padding: 1.5rem;
+    padding: 1.5rem !important;
     position: relative;
 }
 
